--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "clsx": "^1.2.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
