--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,11 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.10",
-    "typescript": "^4.5.5",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^4.5.5"
   }
 }
